--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,13 +10,13 @@
   <nav class="navbar navbar-default" style="background-color: #333333;">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL<br class="break"> Mindful Thoughts</p>
+        <p class="navbar-brand">THE DAILY SCRIBBLE<br class="break">Scribble On</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
           <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
+          <li id="about"><a href="/about">ABOUT ME</a></li>
+          <li id="contact"><a href="/contact">CONTACT ME</a></li>
         </ul>
         <br>
       </div>
