--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,11 @@
+.aboutMe{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+.contactMe{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
 h1{
     padding-top: 50px;
     font-size: 50px;
