--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,3 @@
 <%- include('partials/header.ejs'); %>
     <h1>Contact</h1>
-    <p><%= contact %></p>
+    <p class="contactMe"><%= contact %></p>
