Changes in contact me

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/header.ejs'); %>
     <h1>Contact</h1>
     <p class="contactMe"><%= contact %></p>
+    <br>
+    <p class="contactMe">Want to Post an Article?<br>Send us at <a href="mailto: rohannayan405@gmail.com">rohannayan405@gmail.com</a></p>
