--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -7,6 +7,9 @@
             <br>
             <label for="newContent">Post</label>
             <textarea class="form-control" id="newContent" name="newContent" rows="10"></textarea>
+            <br>
+            <label for="authorName">Name</label>
+            <input type="text" class="form-control" id="authorName" name="authorName">
         </div>
         <button type="submit" class="btn btn-primary">Publish</button>
     </form>
