--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header.ejs') %>
 <div class="post">
     <h1><%= postTitle %></h1>
-    <p><%= postBody %></p>
+    <p class="postContent"><%= postBody %></p>
+    <p class="author"><%= postAuthor %></p>
 </div>
     
