--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <div class="home-container">
         <img class="home-img" src="images/home-img.jpg" alt="photo">
         <div class="intro">
-            <h2>Home</h1>
+            <h1>Home</h1>
             <img class="img1" src="images/img1.jpg" alt="">
             <p><%= startingContent %></p>
         </div>
@@ -11,7 +11,7 @@
     <div class="quote">
         <p><%=Quote%><br>~<%=author%></p>
     </div>
-    <h1>Posts</h1>
+    <h1 class="post-Start">Posts</h1>
         <% newPosts.forEach(post => { %>
             <div class="blog-body">
                 <div>
