Footer Image Change

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 <div class="footer-padding">
     <div class="footer">
         <a class="footer-link" href="https://www.linkedin.com/in/rohan-nayan-83b7b1220"><img src="images/LinkedIn.png" alt="LinkedIn"></a>
-        <a class="footer-link" href="https://github.com/R0hanNayan"><img src="images/GitHub.png" alt="GitHub"></a>
+        <a class="footer-link" href="https://github.com/R0hanNayan"><img src="images/Github.png" alt="GitHub"></a>
         <p>© Rohan Nayan.</p>
     </div>
 </div>
